# mercatorio-backend-challenge

./: README.md  docker-compose.yml
mercatorio_api/: .env  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
mercatorio_api/certidoes/: apps.py  models.py  schemas.py  tasks.py
mercatorio_api/certidoes/migrations/: 0001_initial.py
mercatorio_api/certidoes/services/: certidoes_api.py
mercatorio_api/core/: utils.py
mercatorio_api/credores/: apps.py  models.py  schemas.py  tests.py  views.py
mercatorio_api/credores/migrations/: 0001_initial.py
mercatorio_api/documentos/: models.py  schemas.py
mercatorio_api/documentos/migrations/: 0001_initial.py
mercatorio_api/mercatorio_api/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
mercatorio_api/precatorios/: apps.py  models.py
mercatorio_api/precatorios/migrations/: 0001_initial.py  0002_alter_precatorio_credor.py  0003_alter_precatorio_credor.py
mock_api/: Dockerfile  factory.py  main.py  pyproject.toml
